--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "pets-r-us",
+  "name": "pets2",
   "version": "1.0.0",
-  "description": "pets-r-us website",
+  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1"
+  },
   "scripts": {
-    "test": "\"start\":\"node index.js\" \"dev\":\"nodemon index.js\""
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,9 +21,7 @@
     "url": "https://github.com/sowdapop/pets-r-us/issues"
   },
   "homepage": "https://github.com/sowdapop/pets-r-us#readme",
-  "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
