--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express-ejs-layouts": "^2.5.1"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
