--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
+    "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.4.1",
     "passport": "^0.6.0",
